<resources>
    <string name="app_name">StockItUp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="recover_password_login">Recover Password?</string>
    <string name="need_an_account">Need an account? </string>
    <string name="log_in">LOG IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_had_an_account">Already have an account?</string>
    <string name="slide_1_title">StockItUp!</string>
    <string name="slide_1_desc">The easiest way to order Groceries</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best Discount on Every Order!</string>

    <string name="terms_and_conditions_text">The following specific delivery terms shall be applicable to each delivery made by Supplier to Purchaser under any Order:\n\n
a.Purchaser shall not be charged for packing or cartage expenses. Such expenses shall be paid by Supplier.\n\n
b.Supplier shall include with each shipment a document listing each item and quantity separately, as indicated on the Order.\n\n
c.Supplier shall not back order without prior written approval of Purchaser.\n\n
d.Purchaser reserves the right to reject shipment and return Products at Supplier’s expense if each container, and each package therein, are not adequate for reshipment and not marked to meet requirements of existing labeling laws, and existing weight and measure laws. Each container shall bear the name of Supplier, unless the Products bear any of Purchaser’s proprietary brands.\n\n
e.If any governmental registration or approval is required for the Products, such registration or approval shall be obtained by Supplier at Supplier’s expense.\n\n
f.Palletized loads shall be delivered on Purchaser’s approved pallets only. \n\n
Supplier shall perform reasonable amounts of testing and inspection with respect to each shipment of the Products to ensure the Products comply with the requirements of the Agreement.\n\n
The testing methods and procedures shall conform to the standards, specifications and other requirements \n\n
a. that Purchaser provides to Supplier, \n\n
b. that are prescribed by any applicable law or regulation or requirement of any governmental agency, or \n\n
c. that are otherwise specified or agreed to in writing. \n\n
Upon Purchaser’s request, Supplier shall furnish to Purchaser, before or upon delivery of the Products, a copy of the results of, and a certificate of analysis with respect to, each test. Supplier shall make a record of the date, time and results of each test and the testing procedure used and shall retain all inspection and test records for two years after the Products are delivered to Purchaser or for any reasonable additional period that Purchaser specifies. \n\n
Upon Purchaser’s reasonable request from time to time, Supplier shall furnish copies of the records to Purchaser at no charge. Additionally, Supplier shall cause to be performed, at its sole expense, all third-party testing Purchaser may reasonably request to determine whether Products provided to Purchaser under the Agreement conform to the standards, specifications and other requirements of the Agreement.
    </string>

    <string name="recover_password">Recover Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="full_name">Full Name</string>
    <string name="next">NEXT</string>
    <string name="openNavDrawer">Navigation Bar open</string>
    <string name="closeNavDrawer">Navigation Bar close</string>
    <string name="stockitup_gmail_com">teamstockitup@gmail.com</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="feedback">Feedback</string>
    <string name="need_help">Need Help?</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="offers">Offers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_description">Description</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="product_name">Product Name</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="manage_address">Manage Address</string>
    <string name="version">Version</string>
    <string name="_1_1">1.1</string>
    <string name="no_orders_yet">No orders yet!</string>
    <string name="no_offers_yet">No offers yet!</string>
    <string name="invite_a_friend_and_get_exciting_offers_on_each_successful_invite">Invite a friend and get exciting offers on each successful invite..</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="best_discounts_ever">Best discounts ever..</string>
    <string name="fresh_ingredients_always">Fresh ingredients always!!</string>
    <string name="categories">Categories</string>
    <string name="essential_ingredients">Essential Ingredients</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">CONTACT US</string>
    <string name="your_review_will_help_us_to_give_you_better_experience_make_it_a_good_one">Your review will help us to give you better experience. Make it a good one!</string>
    <string name="tell_us_your_experience">Tell us your experience...</string>
    <string name="discard">Discard</string>
    <string name="submit">Submit</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="save">Save</string>
    <string name="payment">Payment</string>
    <string name="name_on_the_card">Name on the card</string>
    <string name="credit_debit_card_number">Credit/Debit Card Number</string>
    <string name="cvv">CVV</string>
    <string name="exp_month_year">Exp Month/Year</string>
    <string name="pay">PAY</string>
    <string name="order_details">Order Details</string>
    <string name="status">Status:</string>
    <string name="view_ordered_items">View Ordered Items</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="no_faq_yet">No FAQ yet!</string>
    <string name="update_address">Update Address</string>
    <string name="telephone_number">Telephone number</string>
    <string name="postal_code_zip">Postal Code/ZIP</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street_and_apt_suit">Street and Apt/Suit#</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="no_items_yet">No Items yet!</string>
    <string name="category_items">Category Items</string>
    <string name="cart_is_empty">Cart is empty!</string>
    <string name="apply_remove">Apply/Remove</string>
    <string name="checkout_order">CheckOut Order</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="subtotal">SubTotal</string>
    <string name="offer">Offer</string>
    <string name="tax">Tax</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="price">Price ($)</string>
    <string name="category_name">Category name</string>
    <string name="view_category">View Category</string>
    <string name="add_items">Add Items</string>
    <string name="essential_items">Essential Items</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="more">More</string>
    <string name="contact">Contact</string>
    <string name="customer_care_number">Customer Care Number</string>
    <string name="toll_free_number">Toll free Number</string>
    <string name="enter_customer_care_number">Enter Customer care number</string>
    <string name="enter_toll_free_number">Enter toll free number</string>
    <string name="no_categories_yet">No Categories yet!</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_value">Enter Value</string>
    <string name="add_update">Add/Update</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="enter_question">Enter Question</string>
    <string name="select_the_category">Select the Category</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_price">Enter price</string>
    <string name="no_address_yet">No address yet!</string>
    <string name="select_address">Select Address</string>
    <string name="add_address">Add Address</string>
    <string name="contact_us_title">Contact Us</string>
</resources>