<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.AdminAddOrEditFAQActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/faq"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/enter_question"
            android:inputType="text" />

        <EditText
            android:id="@+id/editAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_answer"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorButton"
            android:text="@string/add_update"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>