<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/img_width_height"
                    android:layout_height="@dimen/img_width_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/app_icon" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/full_name"
                    android:ems="10"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:ems="10"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/confirm_password"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:text="" />

                    <TextView
                        android:id="@+id/Agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:paddingTop="5dp"
                        android:textSize="14sp"
                        android:singleLine="false"
                        android:text="@string/i_agree_to_the"
                        />

                    <TextView
                        android:id="@+id/txtConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:textSize="16sp"
                        android:layout_marginLeft="3dp"
                        android:textColor="@color/colorText"
                        android:text="@string/terms_and_conditions"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorButton"
                    android:textSize="18sp"
                    android:text="@string/sign_up"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/already_had_an_account"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/colorText"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="3dp"
                        android:text="@string/log_in"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</RelativeLayout>