<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/img_width_height"
                android:layout_height="@dimen/img_width_height"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slide_3_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slide_3_desc"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_desc" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/next"
                android:textColor="#51ca8e"
                />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>