<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ForgotActivity">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/recover_password"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/splash" />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>